src/Components/Forms/OrgForm.scss
@import "../../variables.scss";

.form {
    margin-top: 15px;
    grid-template-rows: 2fr 2fr 0.5fr 1fr;
    padding: 15px;
    display: grid;
    height: 240px;
    width: 350px;

    @include hidden-form(5px, 0.1s);

    &.show {
        @include show-hidden-form(3px, 0.15s);
    }
}

.symbol {
    position: absolute;
    top: 11px;
    left: 7px;
    color: #333;
}

.error {
    font-size: 14px;
    color: $error-red;
    height: 16px;
}

